--- a/package.json
+++ b/package.json
@@ -1,25 +1,17 @@
 {
-  "name": "node-js-getting-started",
-  "version": "0.1.3",
-  "description": "A sample Node.js app using Express 4",
+  "name": "chatshow-videocomposer",
   "main": "index.js",
+  "version": "0.0.0",
+  "private": true,
   "scripts": {
     "start": "node index.js"
   },
   "dependencies": {
-    "express": "~4.9.x"
+    "commander": "^2.8.1",
+    "express": "~4.9.x",
+    "unzip": "^0.1.11"
   },
   "engines": {
     "node": "0.12.2"
-  },
-  "repository": {
-    "type": "git",
-    "url": "https://github.com/heroku/node-js-getting-started"
-  },
-  "keywords": [
-    "node",
-    "heroku",
-    "express"
-  ],
-  "license": "MIT"
+  }
 }
